--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,10 @@ jobs:
       run: ./gradlew build
       
     - name: build and push
-      uses: docker/build-push-action@v4
+      uses: mr-smithers-excellent/docker-build-push@v4
       with:
           image: rajasekhartammina/dtp03-httpd
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     
