--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,13 +28,19 @@ jobs:
     - name: Build with Gradles
       run: ./gradlew build
       
-    - name: build and push
-      uses: docker/build-push-action@v4
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-          image: rajasekhartammina/github
-          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+          push: true
+          tags: user/app:latest  
+          #image: rajasekhartammina/github
+          #registry: docker.io
+          
     
 
          
