--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,15 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
           push: true
-          tags: user/app:latest  
+          image: rajasekhartammina/github
+          #tags: user/app:latest  
           #image: rajasekhartammina/github
           #registry: docker.io
           
