--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,20 +28,14 @@ jobs:
     - name: Build with Gradles
       run: ./gradlew build
       
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - uses: mr-smithers-excellent/docker-build-push@v5
+      name: Build & push Docker image
       with:
-          registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-          push: true
-          image: rajasekhartammina/github
-          #tags: user/app:latest  
-          #image: rajasekhartammina/github
-          #registry: docker.io
+        image: rajasekhartammina/github
+        tags: v1, latest
+        registry: registry-url.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
           
     
 
