--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       with:
         image: rajasekhartammina/github
         registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+        username: ${{ secrets.actions.DOCKER_USERNAME }}
+        password: ${{ secrets.actions.DOCKER_TOKEN }}
           
     
 
